eks/helm/grafana/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: grafana-ingress
  namespace: kube-system
spec:
  tls: 
  - hosts:
    - grafana-helm.parity.evise-nonprod.com
    secretName: grafana-cert 
  rules:
    - host: grafana-helm.parity.evise-nonprod.com
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 80
            path: /
